# ale_bot

./: Cargo.toml  README.md
.github/workflows/: audit.yml  general.yml
src/: commands.rs  config.rs  lib.rs  main.rs  model.rs  secrets.rs  startup.rs
src/commands/: cohort_cmd.rs  general.rs  schedule.rs  unranked_cmd.rs
src/commands/cohort_cmd/: interested_list.rs
src/model/: cohort.rs  schedule.rs  unranked.rs
src/model/cohort/: interested_list.rs
src/model/cohort/interested_list/: protected_ops.rs
src/model/unranked/: ideas.rs
