[package]
name = "ale_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
dotenv = "0.15.0"
human-time = "0.1.6"
poise = "0.6.1"
secrecy = "0.10.3"
serde = { version = "1.0.219", features = ["derive"] }
# sqlx = { version = "0.8.5", default-features = false, features = ["macros", "postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.44.2", default-features = false, features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
